Changelog for JErgometer
""""""""""""""""""""""""

== Coming 0.8.2 ==

2012-05-06
* [stefan]  * fixed bug #287: Connection test fails with RXTX driver

2012-05-01
* [stefan]  * fixed inconsistency between version numbers in CHANGELOG and versions of releases

== 0.8.1 ==

2012-05-01
* [stefan]  * fixed bug #285: program updater does not set executable property of scripts after update

2012-03-18
* [stefan]  * implemented issue #272: one key to select power during the training
            * fixed bug #276: pulse, power, pedalRPM, ... information flickers sometimes when updated

2012-03-11
* [stefan]  * fixed bug #274: get rid of the error message "ResourceManager : unable to find resource 'org/jergometer/gui/templates/default_de.vm' in any resource loader."
            * fixed bug #275: exception when opening settings dialog

2012-03-10
* [stefan]  * implemented issue #273: provide alternative to buggy RXTX library (socat)

== 0.8.0 ==

2011-04-26
* [stefan]  * fixed popup menu of program tree
            * added menu icons (tanks to Tango Desktop Project)

2011-04-09
* [stefan]  * fixed bug #182: JErgometer wants to update even if it's a bleeding edge version
            * implemented issue #247: display error message when JErgometer is started without RXTX library
            * implemented issue #252: rename all occurrences of "COM port" to "serial port"
            * implemented issue #253: allow to switch between kJ and kcal
            * improved start scripts (manuel update needed under Windows)

== 0.7.11 ==

2011-04-07
* [stefan]  * fixed bug #249: incorrect distance and speed displayed (has to be divided by 10)
            * implemented issue #167: mark real pulse red when pulse information is missing
            * implemented issue #250: display units for distance, speed, power, ...
            * implemented issue #251: select last training program after start

2010-09-05