@@ -88,6 +88,7 @@ choose_new_program_dialog.explanation=This is normal if you have deleted or rena
 label.assign=Assign
 label.skip=Skip
 choose_new_program_dialog.title=Choose a new program
+msg.socat_not_found=The application "socat" does not seem to be installed on your system. Please install it and try again.
 msg.connection_failed=Connection to ergometer failed! See console output for additional information.\nTo solve this problem take a look at your serial port configuration (see settings).
 connection_tester.testing_connection_to_ergometer=Testing connection to ergometer...
 connection_tester.connection_successful=Connection to ergoemter was successful! (ID=%s)
