@@ -109,6 +109,7 @@ label.assign=Zuweisen
 label.skip=Überspringen
 choose_new_program_dialog.explanation=Dies könnte durch die Löschung oder Umbenennung von Trainingsprogrammen entstanden sein. Falls es sich nur um eine Umbenennung handelt, können Sie den betroffenen Sitzungen nun das zugehörige Programm zuweisen.
 choose_new_program_dialog.title=Neues Programm auswählen
+msg.socat_not_found=Die Anwendung "socat" scheint auf Ihrem System nicht installiert zu sein. Bitte installieren Sie sie und wiederholen den Verbindungsversuch.
 msg.connection_failed=Verbindung zum Ergometer fehlgeschlagen! Weitere Informationen finden Sie im Konsolenfenster.\nUm das Problem zu beheben, sollten Sie Ihre Serial-Port-Konfiguration (siehe Einstellungen) überprüfen.
 connection_tester.testing_connection_to_ergometer=Teste Verbindung zum Ergometer...
 connection_tester.connection_successful=Verbindung zum Ergometer war erfolgreich! (ID=%s)
